objects/MergeObject3__c.object
<CustomObject>
    <fields>
        <fullName>MergeObj3Field1__c</fullName>
        <label>MergeObj3Field1</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MergeObj3Field2__c</fullName>
        <description>Test Comment for MergeObj3Field2</description>
        <label>MergeObj3Field2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MergeObj3Field3__c</fullName>
        <label>MergeObj3Field3</label>
        <type>Phone</type>
    </fields>
    <label>MergeObject3</label>
    <nameField>
        <label>MergeObject3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MergeObject3s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>